--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^2.4.0",
     "eslint-config-google": "^0.4.0",
     "mocha": "^2.4.5",
+    "raw-loader": "^0.5.1",
     "webpack": "^1.12.12"
   }
 }
